<resources>
    <string name="app_name">PRM392Front</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="shop_app">ShopApp</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>

    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_continue">Sign in to continue</string>
    <string name="app_logo">App logo</string>

    <string name="register">Register</string>
    <string name="register_prompt">Do not have an account? Register</string>
    <string name="register_fill">Fill in the form to register</string>

    <string name="login">Login</string>
    <string name="login_prompt">Already have an account? Login</string>

    <string name="logout">Logout</string>

    <string name="search_product">Search products…</string>

    <string name="description">Description</string>
    <string name="specifications">Specifications</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="initial_quantity">1</string>
    <string name="add_to_cart">Add to Cart</string>

    <string name="remove">Remove</string>
    <string name="total">Total</string>
    <string name="no_money">0đ</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="checkout_prompt">Proceed to Checkout</string>

    <string name="U">U</string>


</resources>